added the links to the footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     <h1>Welcome to my weather app</h1>
-    <footer>Coded by Zanele Msomi</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/Msomi92" target="_blank">Zanele Msomi</a> is
+      on
+      <a href="https://github.com/Msomi92/myweather" target="_blank"> Github</a>
+      and Hosted by
+      <a
+        href="https://shecodesweatherbasics-5ac1b4.netlify.app/"
+        target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
