updated the footer content to something readable

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <footer>
       Coded by
       <a href="https://github.com/Msomi92" target="_blank">Zanele Msomi</a> is
-      on
-      <a href="https://github.com/Msomi92/myweather" target="_blank"> Github</a>
+
+      <a href="https://github.com/Msomi92/myweather" target="_blank"
+        >open-sourced on Github</a
+      >
       and Hosted by
       <a
         href="https://shecodesweatherbasics-5ac1b4.netlify.app/"
