Added some HTML to the project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <title>my weather</title>
   </head>
   <body>
-    <h1>Welcome to my weather app</h1>
+    <header>
+      <form>
+        <input type="text" , placeholder="Enter the city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Tuesday 14:49, scattered clouds <br />
+          Humidity:66%, Wind:3.13km/h
+        </p>
+      </div>
+      <div>🌤12&degC</div>
+    </main>
     <footer>
       Coded by
       <a href="https://github.com/Msomi92" target="_blank">Zanele Msomi</a> is
