styled the main container and added custom font

--- a/index.html
+++ b/index.html
@@ -3,38 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Roboto:ital,wght@0,100..900;1,100..900&family=Slabo+27px&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/styles.css" />
     <title>my weather</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="text" , placeholder="Enter the city..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Tuesday 14:49, scattered clouds <br />
-          Humidity:66%, Wind:3.13km/h
-        </p>
-      </div>
-      <div>🌤12&degC</div>
-    </main>
-    <footer>
-      Coded by
-      <a href="https://github.com/Msomi92" target="_blank">Zanele Msomi</a> is
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="text" , placeholder="Enter the city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Tuesday 14:49, scattered clouds <br />
+            Humidity:66%, Wind:3.13km/h
+          </p>
+        </div>
+        <div>🌤12&degC</div>
+      </main>
+      <footer>
+        Coded by
+        <a href="https://github.com/Msomi92" target="_blank">Zanele Msomi</a> is
 
-      <a href="https://github.com/Msomi92/myweather" target="_blank"
-        >open-sourced on Github</a
-      >
-      and Hosted by
-      <a
-        href="https://shecodesweatherbasics-5ac1b4.netlify.app/"
-        target="_blank"
-        >Netlify</a
-      >
-    </footer>
+        <a href="https://github.com/Msomi92/myweather" target="_blank"
+          >open-sourced on Github</a
+        >
+        and Hosted by
+        <a
+          href="https://shecodesweatherbasics-5ac1b4.netlify.app/"
+          target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
