--- a/index.html
+++ b/index.html
@@ -16,19 +16,31 @@
     <div class="weather-app">
       <header>
         <form>
-          <input type="text" , placeholder="Enter the city..." required />
-          <input type="submit" value="Search" />
+          <input
+            type="text"
+            ,
+            placeholder="Enter the city..."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Paris</h1>
-          <p>
-            Tuesday 14:49, scattered clouds <br />
-            Humidity:66%, Wind:3.13km/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Paris</h1>
+            <p class="weather-app-details">
+              Tuesday 14:49 , scattered clouds <br />
+              Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature">
+            <div class="weather-app-icon">🌤</div>
+            <div class="weather-app-tem">12</div>
+            <div class="weather-app-unit">°C</div>
+          </div>
         </div>
-        <div>🌤12&degC</div>
       </main>
       <footer>
         Coded by
