--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="city">Paris</h1>
+            <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
               Tuesday 14:49 , scattered clouds <br />
               Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
@@ -39,7 +39,7 @@
           </div>
           <div class="weather-app-temperature">
             <div class="weather-app-icon">🌤</div>
-            <div class="weather-app-tem">12</div>
+            <div class="weather-app-tem" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
