--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <form id="search-form">
           <input
             type="text"
-            ,
             placeholder="Enter the city..."
             required
             class="search-form-input"
@@ -33,12 +32,15 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Tuesday 14:49 , scattered clouds <br />
-              Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+              <span id="time"></span>,<span id="description"></span>
+              <br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-app-temperature">
-            <div class="weather-app-icon">🌤</div>
+            <div id="icon"></div>
+
             <div class="weather-app-tem" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
