added a link of netlify

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         >
         and Hosted by
         <a
-          href="https://shecodesweatherbasics-5ac1b4.netlify.app/"
+          href="https://app.netlify.com/projects/gleaming-capybara-eda7a0/overview"
           target="_blank"
           >Netlify</a
         >
